--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - uploads:/uploads
     restart: unless-stopped
 
-  webp-api:
+  webplow:
     build: .
     env_file: .env
     environment:
