docs: update README, .env.example, config.yaml
- Docker Compose as primary deployment method
- Add LOG_FILE to all config docs
- Add usage logging query examples
- Add architecture overview
- Nginx config uses actual webplow.lcn.tw domain

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
-# 環境變數配置（複製為 .env 後修改）
+# 環境變數配置（本地開發用，複製為 .env 後修改）
+# Docker Compose 部署時環境變數已在 docker-compose.yml 中設定
 
 LISTEN_ADDR=127.0.0.1:9000
 IMGPROXY_URL=http://127.0.0.1:48080
@@ -7,3 +8,4 @@ TOKEN_FILE=tokens.json
 MAX_FILE_SIZE=20971520
 READ_TIMEOUT=30s
 WRITE_TIMEOUT=60s
+LOG_FILE=
