--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -1,6 +1,6 @@
 # Webplow 配置參考
 # 實際配置請使用環境變數（見 .env.example）
-# 此檔案僅作為文件參考
+# Docker Compose 部署時環境變數已在 docker-compose.yml 中設定
 
 server:
   listen_addr: "127.0.0.1:9000"   # env: LISTEN_ADDR
@@ -16,3 +16,6 @@ imgproxy:
 storage:
   temp_dir: "/var/www/imgproxy/uploads"  # env: TEMP_DIR
   max_file_size: 20971520                # env: MAX_FILE_SIZE
+
+logging:
+  log_file: ""                           # env: LOG_FILE（空=不記錄）
