perf: add cpu_shares for background priority
cpu_shares: 256 (default is 1024) — when other processes need CPU,
webplow/imgproxy automatically yields. When idle, runs at full speed.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 services:
   imgproxy:
     image: darthsim/imgproxy:latest
+    cpu_shares: 256
     environment:
       IMGPROXY_BIND: ":8080"
       IMGPROXY_LOCAL_FILESYSTEM_ROOT: /uploads
@@ -14,6 +15,7 @@ services:
 
   webplow:
     build: .
+    cpu_shares: 256
     environment:
       LISTEN_ADDR: "0.0.0.0:9000"
       IMGPROXY_URL: "http://imgproxy:8080"
