docs: convert all docs and comments to English

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-# 環境變數配置（本地開發用，複製為 .env 後修改）
-# Docker Compose 部署時環境變數已在 docker-compose.yml 中設定
+# Environment variables (for local development, copy to .env)
+# When deploying with Docker Compose, env vars are set in docker-compose.yml
 
 LISTEN_ADDR=127.0.0.1:9000
 IMGPROXY_URL=http://127.0.0.1:48080
