feat: SIGHUP token hot reload
- Add Store.Reload() for concurrent-safe token refresh
- Add SIGHUP signal handler in main.go
- Add ExecReload to systemd service
- Update README: container names, reload workflow

--- a/deployments/webplow.service
+++ b/deployments/webplow.service
@@ -7,6 +7,7 @@ Type=simple
 User=www-data
 WorkingDirectory=/opt/webplow
 ExecStart=/opt/webplow/webplow
+ExecReload=/bin/kill -HUP $MAINPID
 Restart=always
 RestartSec=5
 EnvironmentFile=/opt/webplow/.env
